...
    </plurals>
    <string name="trains_card_share">Share ticket</string>
    <string name="trains_share_text">Check out my train ticket (PNR %1$s): %2$s</string>
    <string name="trains_share_chooser_title">Share train ticket</string>
    <string name="trains_share_failed">Couldn\'t share the ticket</string>

    <string name="trains_form_title_add">Add train ticket</string>
    <string name="trains_form_title_edit">Edit train ticket</string>
    <string name="trains_form_pnr">PNR number</string>
    <string name="trains_form_pnr_error">PNR must be exactly 10 digits</string>
    <string name="trains_form_train_number">Train number</string>
    <string name="trains_form_train_name">Train name</string>
    <string name="trains_form_journey_date">Journey date</string>
...
